[tool.poetry]
name = "cawspr"
version = "0.1.2"
description = "Case and word separation preserving replace"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
packages = [
  { include = "cawspr.py" }
]
readme = "README.md"

[tool.poetry.scripts]
cawspr = 'cawspr:cli_main'

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.3"
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.1.3"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
